# neuronek-cli

./: .env.tmpl  .gitignore  .justfile  .rust-version  Cargo.toml  Cross.toml  Earthfile  Makefile  README.md  TODO.md  development.env  devenv.nix  devenv.yaml  rustfmt.toml
.cargo/: config.toml
.fleet/: run.json  settings.json
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: database.rs  humanize.rs  log_ingestion.rs  logger.rs  main.rs  settings.rs
cli/src/human_ui/: README.md
cli/src/ingestion/: ingestion.rs  list_ingestion.rs  log_ingestion.rs  mod.rs
cli/tests/: database_creation.test.rs
docs/: architecture.md  development.md  introduction.md
docs/.templates/: persona.md
docs/adrs/: 0001-using-adr-to-record-and-mantain-decisions-records.md  0002-persistance-layer-of-application.md
docs/cycles/: 0001.md  0002.md
docs/product/: README.md  alternatives.md  glossary.md  what-is-neuronek.md
docs/product/002_ingestion-journal/: 001-ingestion-logging.md  002-ingeston-retrival.md  003-ingestion-planning.md  IJ-1.md
docs/product/command-line-interface/: output-customization.md  shell-autocompletion.md
docs/product/entities/: 0001-ingestion.md
docs/product/ingestion-journal/: 001-ingestion-logging.md
docs/product/personas/: alex.md
docs/product/substance-information/: substance-information.md
docs/research/: 0001-crdt-based-synchronization.md  0002-immutable-logging.md  0003-event-sourcing-based-supply.md  0004-hledger-based-inventory.md
entity/: Cargo.toml  ingestion.rs  lib.rs  prelude.rs  substance.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240728_000001_create_ingestion_table.rs  main.rs
packaging/oci-container/: OCI_CONTAINER.md
scripts/: local_installation
src/: command.rs  core.rs  database.rs  logger.rs  main.rs
src/db/: ingestion.rs  migration.rs  mod.rs  prelude.rs  substance.rs
src/db/migrations/: mod.rs
src/entities/: mod.rs  substance.rs
src/ingestion/: ingestion.rs  list_ingestion.rs  log_ingestion.rs  mod.rs
