cargo-features = ["edition2024"]

[workspace]
members = ["cli", "packages/nudb", "packages/nudb-migration"]

#[dev-dependencies]
#cargo-make = "0.37.14"
#cargo-nextest = "0.9.11"
#sea-orm-cli = { version = "1.0.0-rc.7" }

[workspace.dependencies]
libsqlite3-sys = "0.30.1"
# Vendored build is used to automatically build openssl from source when one is not provided by the system, this is necessary for cross-coplilation and compatibility with operating systems without openssl package.
# https://docs.rs/openssl/latest/openssl/#vendored
# https://github.com/cross-rs/wiki_assets/tree/main/Recipes/openssl-certs
openssl = { version = "0.10", features = ["vendored"] }

[workspace.dev-dependencies]
assert_cmd = "2.0.1"
predicates = "2.1.0"
