cargo-features = ["edition2024"]

[package]
authors = ["Jakub Olan <keinsell@protonmail.com>"]
description = "A CLI application for log ingestion"
edition = "2024"
license = "MIT"
name = "neuronek"
repository = "https://github.com/keinsell/neuronek-cli"
version = "0.0.1-dev.0"
[package.metadata.bundle]
name="neuronek"

[[bin]]
name = "neuronek"
path = "src/main.rs"

[dependencies]
assert_cmd = "2.0.16"
async-std = "1.12.0"
async_once = "0.2.6"
chrono = "0.4.38"
chrono-english = "0.1.7"
chrono-humanize = "0.2.3"
config = "0.14.0"
confique = "0.2.5"
date_time_parser = "0.2.0"
directories-next = "2.0.0"
fern = "0.6.2"
foundations-macros = "3.3.0"
humantime = "2.1.0"
lazy_static = "1.5.0"
log = "0.4.22"
pallet = "0.7.0"
parse_datetime = "0.6.0"
platform-dirs = "0.3.0"
predicates = "3.1.2"
rusqlite = "0.32.1"
serde_json = "1.0.120"
sled = "0.34.7"
structopt = "0.3.26"
tabled = "0.16.0"
tempfile = "3.12.0"
thiserror = "1.0.63"
tracing = "0.1"

[dependencies.clap]
features = [
    "cargo",
    "derive",
    "env",
    "string",
    "unicode",
    "wrap_help",
]
version = "4.5.17"

[dependencies.miette]
features = [
    "fancy",
    "serde",
    "syntect",
]
version = "7.2.0"

[dependencies.nudb]
path = "./packages/nudb"

[dependencies.nudb_migration]
path = "./packages/nudb-migration"

[dependencies.serde]
features = ["derive"]
version = "1.0.210"

[dependencies.sled-extensions]
features = ["bincode"]
version = "0.2.0"

[dependencies.uuid]
features = ["v4"]
version = "1.10.0"

[dev-dependencies]
assert_cmd = "2.0.8"
cargo-mutagen = "0.1.2"
predicates = "3.0.1"

[workspace]
members = [
    "packages/nudb",
    "packages/nudb-migration",
]

[workspace.dependencies.libsqlite3-sys]
features = ["bundled"]
version = "0.30.1"

[workspace.dependencies.openssl]
features = ["vendored"]
version = "0.10"

[workspace.dependencies.sqlite3-src]
features = ["bundled"]
version = "0.30.1"

[workspace.dev-dependencies]
assert_cmd = "2.0.1"
cargo-make = "0.37.14"
cargo-nextest = "0.9.11"
predicates = "2.1.0"

[workspace.dev-dependencies.sea-orm-cli]
version = "1.0.0-rc.7"

[workspace.metadata.dist]
cargo-dist-version = "0.11.1"
ci = ["github"]
installers = ["shell"]
pr-run-mode = "upload"
targets = ["x86_64-unknown-linux-musl"]

[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
