cargo-features = ["edition2024"]

[package]
name = "neuronek-cli"
version = "0.0.1-dev.0"
edition = "2024"

[dependencies]
async-std = "1.12.0"
miette = { version = "7.2.0", features = ["fancy", "serde", "syntect"] }
thiserror = "1.0.63"
clap = { version = "4.5.17", features = [
    "cargo",
    "derive",
    "env",
    "string",
    "unicode",
    "wrap_help"
] }
platform-dirs = "0.3.0"
sled = "0.34.7"
chrono = "0.4.38"
foundations-macros = "3.3.0"
confique = "0.2.5"
lazy_static = "1.5.0"
serde = { version = "1.0.210", features = ["derive"] }
sled-extensions = { version = "0.2.0", features = ["bincode"] }
uuid = { version = "1.10.0", features = ["v4"] }
directories-next = "2.0.0"
config = "0.14.0"
structopt = "0.3.26"
log = "0.4.22"
fern = "0.6.2"
pallet = "0.7.0"
tempfile = "3.12.0"
async_once = "0.2.6"
tabled = "0.16.0"
nudb_migration = { path = "../packages/nudb-migration" }
nudb = { path = "../packages/nudb" }
rusqlite = "0.32.1"
tracing = "0.1"
assert_cmd = "2.0.16"
