[package]
name = "sea-entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "sea_entity"
path = "lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes"] }
sea-orm = { version = "1.0.0-rc.7", features = ["sqlx-sqlite", "runtime-async-std-native-tls", "macros", "mock", "with-chrono"] }
chrono = "0.4.38"
serde = "1.0.204"

[dependencies.sea-orm-migration]
version = "1.0.0-rc.7"
features = [
    "runtime-async-std-native-tls",
    "sqlx-sqlite"
]
