[package]
name = "sea-migrations"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "sea_migrations"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1.0.0-rc.7"
features = [
  "runtime-async-std-native-tls",
  "sqlx-sqlite"
]
